--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(Images/Background_image.jpg);
+    background-image: url(Images/background_image.jpg);
     background-size: cover;
     background-position:right ;
 }
