--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ nav.fas{
 }
 
 #child-pages-table {
-    color: pink;
+    color: black;
     border: 1;
     border-color: #fff;
     text-align: center;
